--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog</title>
-</head>
+<%- include('./partials/head.ejs') %>
 <body>
-    <nav>
-        <div class="site-title">
-            <a href=""><h1>Blog Ninja</h1></a>
-            <p>A netninja site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+
+    <%- include('./partials/nav.ejs') %>
     
     <div class="blogs content">
         <h2>All blogs</h2>
+
+        <% if(blogs.length > 0) { %>
+            <% blogs.forEach(blog => { %>
+                
+                <h3 class="title"><%= blog.title %></h3>
+                <p class="snippet"><%= blog.snippet %></p>
+
+            <% }) %>
+        <% } else { %>
+
+            <h3>No blogs</h3>
+
+        <% } %>
     </div>
+
+    <%- include('./partials/footer.ejs') %>
 </body>
 </html>
