--- a/views/create.ejs
+++ b/views/create.ejs
@@ -5,13 +5,13 @@
     <%- include('./partials/nav.ejs') %>
     
     <div class="create-blog content">
-        <form>
+        <form action="/blogs" method="post">
             <label for="title">Blog title:</label>
-            <input type="text" id="title" required>
+            <input type="text" id="title" name="title" required>
             <label for="snippet">Blog snippet:</label>
-            <input type="text" id="snippet" required>
+            <input type="text" id="snippet" name="snippets" required>
             <label for="body">Blog body:</label>
-            <textarea id="body" cols="30" rows="10" required></textarea>
+            <textarea id="body" cols="30" rows="10" name="body" required></textarea>
             <button>Submit</button>
         </form>
     </div>
