--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,11 +10,10 @@
 
         <% if(blogs.length > 0) { %>
             <% blogs.forEach(blog => { %>
-                
-                <h3 class="title"><%= blog.title %></h3>
-                <p class="snippet"><%= blog.snippets %></p>
-                <p class="snippet"><%= blog.body %></p>
-
+                <a class="single" href="/blogs/<%= blog._id %>">
+                    <h3 class="title"><%= blog.title %></h3>
+                    <p class="snippet"><%= blog.snippets %></p>
+                </a>
             <% }) %>
         <% } else { %>
 
