--- a/views/blogs/create.ejs
+++ b/views/blogs/create.ejs
@@ -8,6 +8,8 @@
         <form action="/blogs" method="post">
             <label for="title">Blog title:</label>
             <input type="text" id="title" name="title" required>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author" required>
             <label for="snippet">Blog snippet:</label>
             <input type="text" id="snippet" name="snippets" required>
             <label for="body">Blog body:</label>
