--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -9,8 +9,17 @@
         <h2><%= blog.title %></h2>
         <div class="content">
           <p><%= blog.body %></p>
+          <p><%= blog.author %></p>
         </div>
         <a class="delete" data-doc="<%= blog._id %>">delete</a>
+    </div>
+
+    <div class="comments content">
+        <h2>Leave a comment</h2>
+        <form action="/blog/details" method="post">
+            <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+            <button>Submit comment</button>
+        </form>
     </div>
 
     <%- include('../partials/footer.ejs') %>
