--- a/views/blogs/details.ejs
+++ b/views/blogs/details.ejs
@@ -16,7 +16,7 @@
 
     <div class="comments content">
         <h2>Leave a comment</h2>
-        <form action="/blog/details" method="post">
+        <form action="/blogs/details" method="post">
             <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
             <button>Submit comment</button>
         </form>
