--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <div class="site-title">
         <a href=""><h1>Blog Ninja</h1></a>
-        <p>A netninja site</p>
+        <p>A great site</p>
     </div>
     <ul>
         <li><a href="/">Blogs</a></li>
